bootstrap/style.scss
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;0,900;1,400&display=swap');

$light: #F4F4F5;


body {
  font-family: 'Poppins', sans-serif;
  overflow-x: hidden;
  scroll-behavior: smooth;
}

.border-cus {
  border: 1px solid green;
}

nav {
  width: 100%;
  background-color: #3A3253;
  padding-bottom: 5px;
  height: auto;

  .my-navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-height: 50px;
  }

  a.brand-name {
    display: inline-block;
    padding: 3px 6px;
    font-size: 17px;
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 700;
    background-color: #403368;
    border-radius: 0px 6px;
    letter-spacing: .2rem;
    color: $light;
    text-decoration: none;
    transition: color 300ms;
    
    &:hover {
      color: #403368;
      background-color: $light;
      transition: color 300ms;
    }
  }

  .nav-items {
    background-color: #3A3253;
    margin-top: 17px;
    padding: 0;
    width: 80%;
    display: none;

    li {
      list-style: none;
      margin-bottom: 18px;

      &:hover a {
        letter-spacing: 4px;
        transition: all 300ms;
      }

      a {
        display: block;
        color: $light;
        text-decoration: none;
        font-size: 16px;
        letter-spacing: 1px;
        transition: all 300ms;
      }
    }
  }


  .menu, .close {
    cursor: pointer;
    display: none;
  }

  .menu.active {
    display: block;
  }

  .close.active {
    display: block;
  }

}


.my-hero {
  height: calc(100vh - 3.125rem);
  // border: 1px solid transparent;

  .content-hero {
    transform: translateY(40%);
    // margin-top: 50%;
    min-height: 300px;
    text-align: center;
  }
  
  h5 {
    font-size: 1.563rem;
    font-weight: 600;
  }

  h1 {
    font-size: 2.188rem;
    font-weight: 600;
  }

  p {
    font-weight: 400;
  }

  .icon-mouse {
    display: block;
    position: absolute;
    z-index: 2;
    bottom: 50px;
    left: 45%;
    text-align: center;
    animation-name: dribble;
    animation-duration: 2s;
    animation-iteration-count: infinite;
    cursor: pointer;
  }
  
  
}

.my-parallax {
  height: 13.625rem;
  background-image: url("../assets/images/paralax.jpg");
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  position: relative;

  &::before {
    position: absolute;
    content: "";
    width: 100%;
    height: 100%;
    background-color:rgba(42, 33, 69, 0.2);
    ;
  }

  p {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    z-index: 2;
    text-align: center;
    font-size: 30px;
    font-weight: 700;
    color: #fff;
    letter-spacing: 2px;
    font-family: 'Source Sans pro', sans-serif;
  }
}

.me-main {
  // margin: 100px auto;
  margin-bottom: 100px;
  padding-top: 100px;

  img {
    padding-left: 18%;
  }

  p {
    margin-top: 24px;
    line-height: 1.8rem;
  }
}


.my-services {
  h2 {
    font-size: 25px;
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 700;
    margin-bottom: 40px;
  }

  .bg-info {
    padding: 24px 14px;
    text-align: center;
    border-radius: 11px;

    img {
      margin-bottom: 24px;
    }

    h3 {
      font-size: 20px;
      font-weight: 700;
      margin-bottom: 24px;
    }

    p {
      font-size: 14px;
      font-weight: 300;
      letter-spacing: 0.2px;
    }
  }
  


}


.my-projects {
  margin-top: 100px;
  h2 {
    font-size: 25px;
    font-weight: 700;
    font-family: 'Source Sans pro', sans-serif;
  }

  p {
    color: #dbcaff;
    font-size: 16px;
    margin-top: 1rem;
  }

  .projects {
    margin-top: 36px;
  }

  .project {
    transition: all 300ms;
    &:hover {
      transform: translateY(-10px);
      transition: all 300ms;
    }
  }

  .btn-load {
    padding-left: 25px;
    padding-right: 25px;
  }
}

.my-skills {
  margin-top: 100px;
  background-color: #413662;
  padding: 50px 21px;

  h2 {
    font-size: 27px;
    color: #fff;
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 700;
  }

  .skills {
    display: grid;
    grid-template-columns: repeat(3, auto);
    grid-template-rows: repeat(2, 1fr);
    justify-content: space-around;
    row-gap: 60px;
    text-align: center;
    margin-top: 50px;

  }

}

footer {
  background-color: #E5E5E5;
  
  h2 {
    padding-top: 55px;
    font-family: 'Source Sans pro',sans-serif;
    font-size: 28px;
    font-weight: 700;
  }

  .social-media {
    margin-top: 20px;
    margin-bottom: 27px;

    img {
      transform: scale(0.8);
    }
  }

  .license {
    li {
      a {
        color: rgba(55, 110, 200, 0.56) !important;
        display: inline-block;

        &:hover {
          text-decoration: underline;
        }
      }
    }
  }

  p {
    margin-top: 34px;
    padding-bottom: 20px;
    margin-bottom: 0;
  }
}

@keyframes dribble {
  0%{
    transform: translateY(0);
  }
  50%{
    transform: translateY(15px);
  }
  100% {
    transform: translateY(0);
  }
}

// phone
@media screen and (max-width: 575.98px){
  .my-parallax {
    height: 13.625rem;
    background-image: url("../assets/images/paralax.jpg");
    background-attachment: scroll;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    position: relative;

    p {
      text-shadow: 0 6px 50px #2A2145;
    }
  }
}

// Landsacep
@media screen and (min-width: 576px) { 
  .my-hero .icon-mouse {
    left: 49%;
  }
}

// Tablets
@media screen and (min-width: 768px) {

  nav .menus {
    display: none;
  }

  nav .nav-items {
    width: initial;

    li {
      margin: 0 0.8rem;
    }
  }

  .me-main p {
    font-size: 1.1rem;
    line-height: 2.1rem;
  }

  .me-main img {
    padding-left: 10%;
  }

  .my-services h2 {
    font-size: 28px;
  }

  .my-projects h2 {
    font-size: 28px;
  }

  .my-skills .skills {
    display: grid;
    grid-template-columns: repeat(3, 60px);
    grid-template-rows: repeat(2, 1fr);
    justify-content: space-around;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }

  footer p {
    margin-top: 30px;
    font-size: 18px;
  }

  footer ul p {
    font-size: 16px;
  }

  footer .social-media img {
    transform: scale(1);
  }
  
    
}


@media screen and (min-width: 992px) {

  nav .container-fluid {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }

  .my-hero {
    .content-hero {
      transform: translateY(35%);
    }
    h5 {
      font-size: 2.2rem;
    }

    h1 {
      font-size: 3.3rem;
    }

    p {
      font-size: 1.3rem;
    }
  }

  .my-parallax {
    height: 18.75rem;

    p {
      font-size: 2.813rem;
    }
  }

  .me-main {
    margin: 200px auto;
  }


  .me-main img {
    padding-left: 5%;
    transform: scale(1.3);
  }

  .me-main p {
    font-size: 1.3rem;
    line-height: 2.5rem;
    margin-top: 3rem;
    padding-left: 6rem !important;
    padding-right: 6rem !important;
  }

  .my-services {
    margin-top: 200px auto;
  }

  .my-services h2 {
    font-size: 2.2rem;
  }

  .my-projects {
    margin: 200px 0;
  }

  .my-projects h2 {
    font-size: 2.2rem;
  }

  .my-projects p {
    color: #dbcaff;
    font-size: 18px;
    margin-top: 1rem;
  }

  .my-skills {
    padding: 100px 50px;
  }

  .my-skills .skills {
    grid-template-rows: auto;
    grid-template-columns: repeat(6, auto);
  }

  .my-skills .skills img {
    width:initial;
    height:initial;
    transform: scale(1.2);
  }

  .my-skills h2 {
    font-size: 2.2rem;
  }

  footer h2 {
    font-size: 2.2rem;
 }

}

